# datin-app

./: .editorconfig  .gitignore  CI_CD_GUIDE.md  FIXES_APPLIED.md  Makefile  QUICK_START.md  README.md  TURBO_DEPENDENCIES.md  docker-compose.yml  package.json  turbo.json
.github/: CODEOWNERS
.github/workflows/: ci.yml
apps/datin-api/: Dockerfile  README.md  package.json  pyproject.toml
apps/datin-api/datin_api/: __init__.py  main.py
apps/datin-api/datin_api/routes/: api.py
apps/datin-api/tests/: __init__.py  test_main.py
apps/datin-discovery/: Dockerfile  README.md  package.json  pyproject.toml
apps/datin-discovery/datin_discovery/: __init__.py  main.py
apps/datin-discovery/datin_discovery/routes/: __init__.py  health.py  search.py
apps/datin-discovery/tests/: __init__.py  test_main.py
apps/datin-web/: Dockerfile  README.md  package.json  tsconfig.json
apps/datin-web/src/app/: layout.tsx  page.tsx
scripts/: setup.sh
